--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <div class="header__content">
-            <h1>HEADER TITLE</h1>
+            <h1 class="header__title">HEADER TITLE</h1>
             <p>header description</p>
         </div>
         <nav class="header__nav">
